--- a/GenshinImpactDialogueSkipper/GenshinImpactDialogueSkipper.csproj
+++ b/GenshinImpactDialogueSkipper/GenshinImpactDialogueSkipper.csproj
@@ -9,6 +9,7 @@
         <UseWindowsForms>true</UseWindowsForms>
         <ApplicationManifest>app.manifest</ApplicationManifest>
         <ApplicationIcon>icon.ico</ApplicationIcon>
+        <RootNamespace>GenshinImpactDialogieSkipper</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
