--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -3,8 +3,12 @@
 on:
   push:
     branches: [ main, master ]
+    paths-ignore:
+      - 'README.md'
   pull_request:
     branches: [ main, master ]
+    paths-ignore:
+      - 'README.md'
 
 jobs:
   build:
