--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -5,10 +5,12 @@ on:
     branches: [ main, master ]
     paths-ignore:
       - 'README.md'
+      - '.gitignore'
   pull_request:
     branches: [ main, master ]
     paths-ignore:
       - 'README.md'
+      - '.gitignore'
 
 jobs:
   build:
